--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "cors": "^2.8.5",
     "ethers": "^4.0.27",
     "express": "^4.16.4",
+    "express-paginate": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
